Added user & loan models and an action items list for frontend

--- a/templates/loancalc.html
+++ b/templates/loancalc.html
@@ -10,6 +10,26 @@ The loan calculator
 
 Contents of the loan calculator application
 
+1st order:
+<ul>
+<li>We will see a form to input a new loan</li>
+<li>The loans that have been inputed already</li>
+<li>A summary graphic of the loans</li>
+</ul>
+2nd order:
+
+<ul>
+<li>options for different payout strategies</li>
+</ul>
+
+
+
+
+
+
+
+
+
 {% endblock %}
 
 
