--- a/templates/loancalc.html
+++ b/templates/loancalc.html
@@ -1,12 +1,33 @@
-
-
 {% extends 'base.html' %}
 
-{% block header_text %} 
-The loan calculator
-{% endblock %}
+{% block title %}The Loan Calculator{% endblock %}
+
+
 
 {% block contents %}
+
+
+<div class="container">
+	<div class="row">
+		<div class="col-md-12">
+			<div class="text-center">
+			  <h1>
+				The Loan Calculator
+			  </h1>
+			</div>
+		</div>
+	</div>
+</div>
+
+
+<div class="container">
+	<div class="row">
+		<div class="col-md-12">
+
+
+
+
+
 
 Contents of the loan calculator application
 
@@ -18,23 +39,6 @@ Contents of the loan calculator application
 </ul>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 2nd order:
 <ul>
 <li>options for different payout strategies</li>
@@ -43,6 +47,9 @@ Contents of the loan calculator application
 
 
 
+		</div>
+	</div>
+</div>
 
 
 
