--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -29,15 +29,7 @@
 
 
 
-Contents of the loan calculator application
-
-1st order:
-<ul>
-<li>We will see a form to input a new loan</li>
-<li>The loans that have been inputed already</li>
-<li>A summary graphic of the loans</li>
-</ul>
-
+The beginning of your portfolio:
 
 <form method="POST">
 	<input name="balance" id="id_balance" placeholder="Balance" />
@@ -70,12 +62,7 @@ Contents of the loan calculator application
 {% endif %}
 
 
-2nd order:
-<ul>
-<li>options for different payout strategies</li>
-</ul>
-
-
+{{ summary }}
 
 
 		</div>
