adding portfolio model and refactoring tests

--- a/templates/loancalc.html
+++ b/templates/loancalc.html
@@ -39,7 +39,7 @@ Contents of the loan calculator application
 </ul>
 
 
-<form method="POST">
+<form method="POST" action="/portfolio/new">
 	<input name="balance" id="id_balance" placeholder="Balance" />
 	<input name="interest_rate" id="id_interest_rate" placeholder="Interest Rate" />
 	<input name="minimum_payment" id="id_minimum_payment" placeholder="Minimum Payment" />
