--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -31,7 +31,7 @@
 
 The beginning of your portfolio:
 
-<form method="POST">
+<form method="POST" action="/portfolio/new">
 	<input name="balance" id="id_balance" placeholder="Balance" />
 	<input name="interest_rate" id="id_interest_rate" placeholder="Interest Rate" />
 	<input name="minimum_payment" id="id_minimum_payment" placeholder="Minimum Payment" />
